syntax = "proto3";
package workspace.v1;
option go_package = "github.com/igorrmotta/api-corestack/services/golang/gen/workspace/v1;workspacev1";

import "common/v1/pagination.proto";
import "google/protobuf/timestamp.proto";

message Workspace {
  string id = 1;
  string name = 2;
  string slug = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateWorkspaceRequest {
  string name = 1;
  string slug = 2;
}

message CreateWorkspaceResponse {
  Workspace workspace = 1;
}

message GetWorkspaceRequest {
  string id = 1;
}

message GetWorkspaceResponse {
  Workspace workspace = 1;
}

message ListWorkspacesRequest {
  common.v1.PaginationRequest pagination = 1;
}

message ListWorkspacesResponse {
  repeated Workspace workspaces = 1;
  common.v1.PaginationResponse pagination = 2;
}

message UpdateWorkspaceRequest {
  string id = 1;
  string name = 2;
  string slug = 3;
}

message UpdateWorkspaceResponse {
  Workspace workspace = 1;
}

message DeleteWorkspaceRequest {
  string id = 1;
}

message DeleteWorkspaceResponse {}

service WorkspaceService {
  rpc CreateWorkspace(CreateWorkspaceRequest) returns (CreateWorkspaceResponse);
  rpc GetWorkspace(GetWorkspaceRequest) returns (GetWorkspaceResponse);
  rpc ListWorkspaces(ListWorkspacesRequest) returns (ListWorkspacesResponse);
  rpc UpdateWorkspace(UpdateWorkspaceRequest) returns (UpdateWorkspaceResponse);
  rpc DeleteWorkspace(DeleteWorkspaceRequest) returns (DeleteWorkspaceResponse);
}
